<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="type_images">Images</string>
    <string name="type_videos">Videos</string>
    <string name="close_action">Close</string>
    <string name="save_action">Save</string>
    <string name="share_action">Share</string>
    <string name="share_link_action">Share link</string>
    <string name="share_with">Share with…</string>
    <string name="share_app">Share app</string>
    <string name="app_share">I invite you to try this interesting app: WhatSave. Download it here: %s</string>
    <string name="open_action">Open</string>
    <string name="more_label">More</string>
    <string name="home_label">Statuses</string>
    <string name="saved_label">Saved</string>
    <string name="tools_label">Tools</string>
    <string name="loading">Loading</string>
    <string name="please_wait_a_second">Please, wait a second…</string>
    <string name="could_not_load_statuses">Couldn\'t load statuses</string>
    <string name="no_statuses_title">No statuses</string>
    <string name="save_some_statuses">Save some statuses</string>
    <string name="open_wa_action">Open WhatsApp</string>
    <string name="could_not_open_wa">Could not open WhatsApp</string>
    <string name="saving_status">Saving status…</string>
    <string name="failed_to_save">Failed to save.</string>
    <string name="saved_successfully">Saved successfully.</string>
    <string name="saved_x_statuses">Saved %d statuses</string>
    <string name="save_again_title">Save again?</string>
    <string name="you_saved_this_status_previously">You saved this status before. Do you want to save it again?</string>
    <string name="status_unsaved">Unsaved</string>
    <string name="status_saved">Saved</string>
    <string name="action_select_all">Select all</string>
    <string name="unable_to_share_sharing_too_many_files">Unable to share: too many files.</string>
    <string name="x_selected">%d selected</string>
    <string name="x_is_the_default_client_now">%s is the default client now.</string>
    <string name="default_client_cleared">Loading statuses from all clients.</string>
    <string name="saf_tutorial_1"><![CDATA[A folder selection window will appear. Please make sure you choose the right path, which is usually <b>%s</b>, as demonstrated in the example image:]]></string>
    <string name="saf_tutorial_2">Once you have selected the appropriate folder, press \"Use this folder\" at the bottom to confirm.</string>
    <string name="you_should_open_wa_and_download_some_statuses">You should go to WhatsApp and download some statuses</string>
    <string name="there_may_be_no_saved_files">There may be no saved files</string>
    <string name="wa_is_not_installed_title">WhatsApp isn\'t installed</string>
    <string name="this_application_will_not_work">This application won\'t work</string>
    <string name="launch_x_client">Launch %s</string>
    <string name="delete_action">Delete</string>
    <string name="delete_saved_status_title">Delete saved status</string>
    <string name="delete_saved_statuses_title">Delete saved statuses</string>
    <string name="this_saved_status_will_be_permanently_deleted">This saved status will be permanently deleted.</string>
    <string name="x_saved_statuses_will_be_permanently_deleted">%d saved statuses will be permanently deleted.</string>
    <string name="deleting_please_wait">Deleting, please wait…</string>
    <string name="deletion_success">Deletion success.</string>
    <string name="deletion_failed">Deletion failed.</string>
    <string name="permissions_denied_title">Permissions denied</string>
    <string name="permissions_denied_message">You must grant required permissions. This application won\'t work correctly without these permissions.</string>
    <string name="grant_action">Grant</string>
    <string name="open_settings_action">Open settings</string>
    <string name="action_settings">Settings</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_statuses">Statuses</string>
    <string name="settings_other">Other</string>
    <string name="advanced">Advanced</string>
    <string name="information">Information</string>
    <string name="use_custom_font_title">Use Manrope font</string>
    <string name="theme_mode_title">Theme mode</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="follow_system">Follow System</string>
    <string name="just_black_theme_title">Just Black</string>
    <string name="statuses_location_title">Statuses location</string>
    <string name="statuses_location_summary">Location where statuses should be found. You should change this setting only if the app is unable to load statuses from the default location.</string>
    <string name="no_storage_device_found">No storage device found</string>
    <string name="exclude_saved_statuses_title">Exclude saved statuses</string>
    <string name="exclude_saved_statuses_summary">If enabled, saved statuses won\'t appear in the main page. Them will be accessible only from the \"Saved\" page.</string>
    <string name="save_location_title">Save location</string>
    <string name="save_location_summary">Select the location where you want to store your saved statuses.</string>
    <string name="whatsapp_icon_title">Small WhatsApp icon</string>
    <string name="whatsapp_icon_summary">Display a small icon below each status to identify from which client it was obtained.</string>
    <string name="quick_deletion_title">Quick deletion</string>
    <string name="quick_deletion_summary">Allows the deletion of saved statuses without displaying a confirmation window. Not recommended.</string>
    <string name="review_permissions_title">Review permissions</string>
    <string name="review_permissions_summary">Grant or remove access permissions to WhatsApp directories.</string>
    <string name="default_client_title">Default client</string>
    <string name="default_client_summary">If you have WhatsApp and Business on your device, you can pick which one to get statuses from.</string>
    <string name="analytics_enabled_title">Send usage statistics</string>
    <string name="analytics_enabled_summary">When this is enabled, WhatSave may send anonymous usage statistics that help us understand how users use the app.</string>
    <string name="about_title">About</string>
    <string name="about_summary">Version, links, contact.</string>
    <string name="version_x">Version %s</string>
    <string name="author_title">Author</string>
    <string name="telegram_title">Join chat</string>
    <string name="telegram_summary">Join the WhatSave chat to receive news, discuss suggestions, report bugs, and more.</string>
    <string name="latest_release_title">Latest release</string>
    <string name="latest_release_summary">View the latest version of the app and recent changes.</string>
    <string name="translations_title">Translations</string>
    <string name="translations_summary">You can help us by translating this app into your language.</string>
    <string name="fork_on_github_title">Fork on GitHub</string>
    <string name="fork_on_github_summary">View, fork or download app sources.</string>
    <string name="report_bugs_title">Report bugs</string>
    <string name="report_bugs_summary">Open the issue tracker page on GitHub.</string>
    <string name="oss_licenses_title">Open Source Licenses</string>
    <string name="oss_licenses_summary">View the licenses for the open source libraries used in this app.</string>
    <string name="privacy_and_terms_summary">View our Privacy Policy and Terms of Use.</string>
    <string name="message_view_is_disabled">Message view is disabled</string>
    <string name="you_wont_be_able_to_see_messages_here">You won\'t be able to see deleted or received WhatsApp messages here.</string>
    <string name="message_view">Message view</string>
    <string name="received_messages_listener">Received messages listener</string>
    <string name="confirm_device_credentials">You must confirm your credentials before using this tool.</string>
    <string name="conversations_title">Conversations</string>
    <string name="messages_from_x">Messages from %s</string>
    <string name="message_view_description">Read deleted or received messages without your contacts knowing.</string>
    <string name="message_view_term_1">This function reads the content of WhatsApp notifications to save received messages.</string>
    <string name="message_view_term_2">Therefore, permission to access notifications is required for this to function properly.</string>
    <string name="message_view_term_3">Only WhatsApp notifications will be processed. The messages are saved only on this device.</string>
    <string name="message_view_term_4">The messages that your contacts send and delete while you are offline are not saved by WhatSave because your phone won\'t receive a WhatsApp notification.</string>
    <string name="message_view_term_5">Remember that WhatSave is an open-source app, so you can always review its internal workings to ensure your privacy is not compromised.</string>
    <string name="use_message_view">Use Message view</string>
    <string name="disable_message_view_title">Disable Message view</string>
    <string name="disable_message_view_confirmation">When you deactivate Message view, all saved messages here will be deleted. Are you sure?</string>
    <string name="delete_conversation_title">Delete conversation</string>
    <string name="delete_conversation_confirmation">This will delete all messages from this conversation.</string>
    <string name="delete_conversations_title">Delete conversations</string>
    <string name="delete_x_conversations_confirmation">%d conversations will be permanently deleted.</string>
    <string name="blacklist_sender">Don\'t save messages from this sender</string>
    <string name="blacklist_senders">Don\'t save messages from this senders</string>
    <string name="blacklisted_senders">Blacklisted senders</string>
    <string name="no_blacklisted_senders">Here will be shown the people from whom you do not what their messages to be saved.</string>
    <string name="remove_x_from_the_blacklist"><![CDATA[Do you want to remove <b>%s</b> from this blacklist?]]></string>
    <string name="no_conversations">There are no conversations to display</string>
    <string name="empty">Empty</string>
    <string name="yes_action">Yes</string>
    <string name="no_action">No</string>
    <string name="clear_messages">Clear messages</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="msg_a_number">Message a number</string>
    <string name="msg_a_number_description">Start a conversation with someone who is not on your contact list, using their phone number.</string>
    <string name="phone_number_label">Phone number</string>
    <string name="message_label">Message</string>
    <string name="send_action">Send</string>
    <string name="language_name">Language</string>
    <string name="auto_update_title">Auto. update search</string>
    <string name="only_wifi_title">Only Wi-Fi</string>
    <string name="only_wifi_summary">Search for updates only when Wi-Fi is connected.</string>
    <string name="storage_access_title">Storage access</string>
    <string name="storage_access_description">The storage access permission is essential for loading and saving statuses.</string>
    <string name="directory_access_title">Directory access</string>
    <string name="directory_access_description">You must allow this app to read the directory(s) where WhatsApp stores the statuses.</string>
    <string name="grant_access_action">Grant access</string>
    <string name="revoke_permissions_title">Revoke permissions</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="privacy_and_terms">Privacy and terms</string>
</resources>