<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 Christians Martínez Alvarado
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by
  ~ the Free Software Foundation either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/settings_interface">

        <ListPreference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_contrast_24dp"
            android:title="@string/theme_mode_title"
            android:entries="@array/theme_mode_titles"
            android:entryValues="@array/theme_mode_values"
            android:defaultValue="auto"
            app:useSimpleSummaryProvider="true"
            android:key="theme_mode"/>

        <SwitchPreferenceCompat
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/just_black_theme_title"
            android:defaultValue="false"
            android:key="just_black_theme"/>

        <SwitchPreferenceCompat
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/use_custom_font_title"
            android:defaultValue="true"
            android:key="use_custom_font"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/settings_statuses">

        <com.simplified.wsstatussaver.preferences.StoragePreference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_storage_24dp"
            android:title="@string/statuses_location_title"
            android:summary="@string/statuses_location_summary"
            android:key="statuses_location"/>

        <com.simplified.wsstatussaver.preferences.SaveLocationPreference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_folder_24dp"
            android:title="@string/save_location_title"
            android:summary="@string/save_location_summary"
            android:key="preferred_save_location"/>

        <SwitchPreferenceCompat
            android:layout="@layout/list_item_view_switch"
            android:icon="@drawable/ic_save_alt_24dp"
            android:title="@string/exclude_saved_statuses_title"
            android:summary="@string/exclude_saved_statuses_summary"
            android:defaultValue="false"
            android:key="exclude_saved_statuses"/>

        <SwitchPreferenceCompat
            android:layout="@layout/list_item_view_switch"
            android:icon="@drawable/ic_delete_24dp"
            android:title="@string/quick_deletion_title"
            android:summary="@string/quick_deletion_summary"
            android:defaultValue="false"
            android:key="quick_deletion"/>

        <com.simplified.wsstatussaver.preferences.DefaultClientPreference
            android:layout="@layout/list_item_view"
            android:title="@string/default_client_title"
            android:summary="@string/default_client_summary"
            android:key="default_client"/>

        <Preference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_lock_open_24dp"
            android:title="@string/review_permissions_title"
            android:summary="@string/review_permissions_summary"
            android:key="grant_permissions"
            android:persistent="false"
            app:isPreferenceVisible="false"/>

        <SwitchPreferenceCompat
            android:layout="@layout/list_item_view_switch"
            android:title="@string/whatsapp_icon_title"
            android:summary="@string/whatsapp_icon_summary"
            android:defaultValue="false"
            android:key="whatsapp_icon"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/advanced">

        <ListPreference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_translate_24dp"
            android:title="@string/language_name"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="auto"
            android:key="language_name"/>

        <ListPreference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_update_24dp"
            android:title="@string/auto_update_title"
            android:entries="@array/update_mode_titles"
            android:entryValues="@array/update_mode_values"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/auto_update_policy"
            android:key="update_search_mode"/>

        <SwitchPreferenceCompat
            android:layout="@layout/list_item_view_switch"
            android:icon="@drawable/ic_wifi_24dp"
            android:title="@string/only_wifi_title"
            android:summary="@string/only_wifi_summary"
            android:defaultValue="false"
            android:key="update_only_wifi"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/information">

        <Preference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/about_title"
            android:summary="@string/about_summary"
            android:key="about"
            android:persistent="false"/>

        <Preference
            android:layout="@layout/list_item_view"
            android:icon="@drawable/ic_privacy_tip_24dp"
            android:title="@string/privacy_and_terms"
            android:summary="@string/privacy_and_terms_summary"
            android:key="privacy_policy"
            android:persistent="false"/>

    </PreferenceCategory>

</PreferenceScreen>