<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:title="@string/share_action"
        android:icon="@drawable/ic_share_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save"
        android:title="@string/save_action"
        android:icon="@drawable/ic_save_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_action"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all_24dp"
        app:showAsAction="never"/>
</menu>