<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 Christians Martínez Alvarado
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by
  ~ the Free Software Foundation either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/imagesFragment"
        android:icon="@drawable/ic_image_24dp"
        android:title="@string/type_images"/>
    <item
        android:id="@+id/videosFragment"
        android:icon="@drawable/ic_slideshow_24dp"
        android:title="@string/type_videos"/>
    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_save_alt_24dp"
        android:title="@string/saved_label"/>
    <item
        android:id="@+id/toolsFragment"
        android:icon="@drawable/ic_menu_24dp"
        android:title="@string/tools_label"/>
</menu>