<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2024 Christians Martínez Alvarado
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by
  ~ the Free Software Foundation either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  -->

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/directory_access_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_folder_24dp"
            android:textAppearance="?textAppearanceTitleMedium"
            android:text="@string/directory_access_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/directory_access_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textAppearance="?textAppearanceLabelMedium"
            android:textColor="?android:textColorSecondary"
            android:text="@string/directory_access_description"
            app:layout_constraintTop_toBottomOf="@+id/directory_access_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/revoke_access_button"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/revoke_permissions_title"
            app:backgroundTint="?colorErrorContainer"
            app:icon="@drawable/ic_delete_24dp"
            app:iconTint="?colorOnErrorContainer"
            app:layout_constraintTop_toBottomOf="@+id/directory_access_description"
            app:layout_constraintEnd_toStartOf="@+id/grant_access_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/grant_access_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:text="@string/grant_access_action"
            app:layout_constraintTop_toBottomOf="@+id/directory_access_description"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/list_directories_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:icon="@drawable/ic_view_list_24dp"
            app:iconTint="?colorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/directory_access_description"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>