<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 Christians Martínez Alvarado
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by
  ~ the Free Software Foundation either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/msg_a_number_padding_vertical"
    android:paddingBottom="@dimen/msg_a_number_padding_vertical"
    android:paddingStart="@dimen/msg_a_number_padding_horizontal"
    android:paddingEnd="@dimen/msg_a_number_padding_horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_label"
        app:endIconDrawable="@drawable/ic_drop_down_24dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:inputType="phone"
            tools:ignore="Autofill"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/message_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?listPreferredItemHeightSmall"
            android:gravity="top"
            android:minLines="4"
            android:maxLines="10"
            android:inputType="text|textAutoCorrect|textCapSentences|textLongMessage|textMultiLine"
            tools:ignore="Autofill"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?colorOnPrimary"
        android:text="@string/send_action"
        app:icon="@drawable/ic_send_24dp"
        app:iconTint="?colorOnPrimary"/>

</LinearLayout>